--- a/src/pages/admin/AdminLayout.css
+++ b/src/pages/admin/AdminLayout.css
@@ -289,7 +289,7 @@ button, input, select, textarea {
   overflow: hidden;
   transform: translateX(-100%);
   transition: transform .3s;
-  z-index: 999;
+  z-index: 10000;
 }
 
 .sidebar.open {
@@ -313,7 +313,7 @@ button, input, select, textarea {
   height: 100%;
   background: rgba(0,0,0,0);
   display: none;
-  z-index: 998;
+  z-index: 9999;
 }
 
 .sb-overlay.show {
